@@ -4,7 +4,7 @@
 
 Version 1.4.9 - CVS
 -------------------
-
+  - Drop obsolete script plugins/make_archive.pl.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
